# tachyon

./: .gitignore  Anchor.toml  LICENSE  README.md  clippy.toml  package.json  tsconfig.json
app/: package.json
app/src/: TachyonClient.ts  index.ts  types.ts
app/src/idl/: index.ts  tachyon.json  tachyon.ts
app/src/rpc/: funcEval.ts  funcLoad.ts  index.ts  initCos.ts  initErf.ts  initExp.ts  initLn.ts  initLog10.ts  initNormCdf.ts  initNormPdf.ts  initSin.ts  initialize.ts
app/src/state/: functionData.ts  functions.ts  index.ts
app/src/utils/: compute.ts  index.ts  numbers.ts  pda.ts
programs/tachyon/: Cargo.toml
programs/tachyon/src/: accessors.rs  calculator.rs  error.rs  lib.rs
programs/tachyon/src/functions/: cos.rs  erf.rs  exp.rs  function_logic.rs  ln.rs  log10.rs  mod.rs  norm_cdf.rs  norm_pdf.rs  sin.rs
programs/tachyon/src/instructions/: func_eval.rs  func_init.rs  func_load.rs  initialize.rs  mod.rs
programs/tachyon/src/math/: interpolation.rs  mod.rs  pade_exp.rs
programs/tachyon/src/state/: function_data.rs  functions.rs  mod.rs
programs/tachyon_math_library/: Cargo.toml
programs/tachyon_math_library/src/: accessors.rs  error.rs  lib.rs
programs/tachyon_math_library/src/functions/: function_logic.rs  log10.rs  sin.rs
programs/tachyon_math_library/src/instructions/: func_load.rs
programs/tachyon_math_library/src/math/: mod.rs
programs/tachyon_math_library/src/state/: mod.rs
scripts/: initialize.ts
tests/: tachyon.ts
