[package]
name = "tachyon-math-library"
version = "0.5.2"
edition = "2021"
license = "MIT"
description = "Solana library for low compute-unit cost evaluation of transcendental functions"
repository = "https://gitlab.com/dysonswap/tachyon"
documentation = "https://gitlab.com/dysonswap/tachyon-test"

[lib]
crate-type = ["cdylib", "lib"]
name = "tachyon_math_library"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.27.0", features = ["init-if-needed"] }
solana-program = "=1.16.23"
bytemuck = { version = "1.4.0", features = ["derive", "min_const_generics"]}

num-traits = "0.2"
num-derive = "0.3"
thiserror = "1.0"
num-integer = "0.1.44"
borsh = "0.9.1"
rust_decimal = { version = "=1.29.1", features = ["maths"] }

